# ai-for-developers-project-387

./: .env.template  .gitignore  Dockerfile  README.md  docker-compose.yml  lighthouserc.json  main.tsp  nginx.conf.template  package-lock.json  package.json  supervisord.conf
.github/workflows/: lighthouse.yml
backend/: .dockerignore  .env.docker  .env.template  Dockerfile  docker-compose.yml  pyproject.toml
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/dto/: __init__.py  appointment_type.py  auth.py  base.py  booking.py  common.py  guest.py
backend/app/models/: __init__.py  appointment_type.py  booking.py  guest.py
backend/app/repositories/: __init__.py  appointment_repo.py  booking_repo.py  guest_repo.py
backend/app/routers/: __init__.py  appointment_type.py  auth.py  booking.py
backend/app/services/: __init__.py  appointment_service.py  auth_service.py  booking_service.py
backend/migrations/: env.py
backend/migrations/versions/: 5b7a7efadfee_initial_migration.py
frontend/: .dockerignore  .env.development  .env.production  Dockerfile  nginx.conf  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  theme.ts
frontend/src/api/: client.ts  types.ts
frontend/src/components/: Layout.tsx  ProtectedRoute.tsx
frontend/src/pages/: AdminDashboard.tsx  AdminLogin.tsx  Booking.tsx  Home.tsx
